--- a/public/configs.html
+++ b/public/configs.html
@@ -4,6 +4,8 @@
 <form action="/configs">
    <input type="text" id="zeksKey" name="zeksKey">
    <label for="zeksKey">zeks apiKey</label><br>
+   <input type="text" id="LeysKey" name="LeysKey">
+   <label for="LeysKey">leys apiKey</label><br>
    <input type="text" name="prefix" id="prefix">
    <label for="prefix">prefix</label><br>
    <input type="text" name="pack" id="pack">
